fix spacing between field names

--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -37,7 +37,7 @@
     font-size: 20px;
 }
 
-p {
+.detail-fields p {
     margin-top: -15px;
     padding-bottom: -2px;
 }
